--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdelmounaim Portfolio</title>
-    <link rel="icon" type="image/png" href="images/logo1.png">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <link rel="stylesheet" href="files/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap">
 </head>
-<body>
+<body id="body">
+    
     <div id="main">
-
+        <button id="mode" onclick="ToggleDark()" ><img id="modeimg" src="images/light.png" width="50%"></button>
         <div id="personal">
             <div id="overall">
                 <img id="me" src="images/monaim.jpg" alt="Thats me!" >
@@ -48,6 +49,7 @@
 
 
             <div id="up">
+    
                 <div id="nav">
                     <a href="#skill" onclick="showSection('skill')">Skills</a>
                     <a href="#project" onclick="showSection('project')">Projects</a>
