--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <section id="project" style="display: none;">
                     <div id="Kharajni">
                         <img src="images/Kharajni.png" style="width: 50%; padding-top: 5%; border-radius: 15px;">
-                        <p style="text-align:center;"></p>
+                        <a href="https://moulahcene26.github.io/Kharajni/" target="_blank"><p style="text-align:center;"></p></a>
 
                     </div>
                     <div id="Portfolio">
