--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div id="Portfolio">
                         <img src="images/case.png" width="30%">
-                        <p style="text-align:center;"></p>
+                        <a href="https://moulahcene26.github.io/portfolio" target="_blank"><p style="text-align:center;"></p></a>
                     </div>
 
                 </section>
